[package]
name = "fpar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.2", features = ["derive"] }
crossbeam = "0.8.2"
crossbeam-channel = "0.5.8"
once_cell = "1.18.0"

[profile.release]
debug = true
