[package]
name = "ripparallel"
version = "0.1.0"
edition = "2021"
description = "ripparallel is a line-oriented job parallelization tool that enables parallelization across cpu cores with minimal overhead."
license = "MIT"
default-run = "rp"

[[bin]]
name = "rp"
path = "src/main.rs"
test = false
bench = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5.0"
clap = { version = "4.4.2", features = ["derive"] }
crossbeam = "0.8.2"
crossbeam-channel = "0.5.8"
rand = "0.8.5"
subprocess = "0.2.9"
tempfile = "3.8.0"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "spawning_strategies"
harness = false

[profile.release]
debug = true
